logs/output_ferro34.txt
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:53: UserWarning: train_data has been renamed data
  warnings.warn("train_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:58: UserWarning: test_data has been renamed data
  warnings.warn("test_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:43: UserWarning: train_labels has been renamed targets
  warnings.warn("train_labels has been renamed targets")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:48: UserWarning: test_labels has been renamed targets
  warnings.warn("test_labels has been renamed targets")
init done
{'quantization.global_wb': 34, 'inp_mult': 80, 'nb_hidden': 800, 'nb_steps': 150, 'batch_size': 128, 'quantization.global_lr': 0.0004, 'reg_size': 4.073180282999787e-05, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=0.50495
Test accuracy: 0.900
Train accuracy: 0.864
Epoch 2: loss=0.41162
Test accuracy: 0.891
Train accuracy: 0.887
Epoch 3: loss=0.31556
Test accuracy: 0.920
Train accuracy: 0.915
Epoch 4: loss=0.21665
Test accuracy: 0.929
Train accuracy: 0.939
Epoch 5: loss=0.17355
Test accuracy: 0.941
Train accuracy: 0.949
Epoch 6: loss=0.14157
Test accuracy: 0.944
Train accuracy: 0.958
Epoch 7: loss=0.12217
Test accuracy: 0.942
Train accuracy: 0.964
Epoch 8: loss=0.10974
Test accuracy: 0.955
Train accuracy: 0.968
Epoch 9: loss=0.08946
Test accuracy: 0.953
Train accuracy: 0.973
Epoch 10: loss=0.04924
Test accuracy: 0.963
Train accuracy: 0.988
Epoch 11: loss=0.04029
Test accuracy: 0.963
Train accuracy: 0.992
Epoch 12: loss=0.03702
Test accuracy: 0.964
Train accuracy: 0.993
Epoch 13: loss=0.03434
Test accuracy: 0.965
Train accuracy: 0.994
Epoch 14: loss=0.03267
Test accuracy: 0.965
Train accuracy: 0.995
Epoch 15: loss=0.03149
Test accuracy: 0.964
Train accuracy: 0.995
Epoch 16: loss=0.02945
Test accuracy: 0.964
Train accuracy: 0.995
Epoch 17: loss=0.02811
Test accuracy: 0.965
Train accuracy: 0.996
Epoch 18: loss=0.02697
Test accuracy: 0.965
Train accuracy: 0.996
Epoch 19: loss=0.02230
Test accuracy: 0.965
Train accuracy: 0.998
Epoch 20: loss=0.02204
Test accuracy: 0.965
Train accuracy: 0.998
Epoch 21: loss=0.02191
Test accuracy: 0.965
Train accuracy: 0.998
Epoch 22: loss=0.02164
Test accuracy: 0.965
Train accuracy: 0.998
Epoch 23: loss=0.02160
Test accuracy: 0.964
Train accuracy: 0.998
Epoch 24: loss=0.02145
Test accuracy: 0.965
Train accuracy: 0.998
Epoch 25: loss=0.02132
Test accuracy: 0.965
Train accuracy: 0.998
Epoch 26: loss=0.02130
Test accuracy: 0.965
Train accuracy: 0.998
Epoch 27: loss=0.02109
Test accuracy: 0.965
Train accuracy: 0.998
Epoch 28: loss=0.02037
Test accuracy: 0.965
Train accuracy: 0.999
Epoch 29: loss=0.02026
Test accuracy: 0.965
Train accuracy: 0.999
Epoch 30: loss=0.02023
Test accuracy: 0.965
Train accuracy: 0.999
Epoch 31: loss=0.02030
Test accuracy: 0.965
Train accuracy: 0.999
Epoch 32: loss=0.02027
Test accuracy: 0.965
Train accuracy: 0.999
Epoch 33: loss=0.02034
Test accuracy: 0.965
Train accuracy: 0.999
Epoch 34: loss=0.02033
Test accuracy: 0.965
Train accuracy: 0.999
Epoch 35: loss=0.02032
Test accuracy: 0.965
Train accuracy: 0.999
{'quantization.global_wb': 34, 'inp_mult': 80, 'reg_size': 4.073180282999787e-05, 'weight_sum': 0.1146141882514887}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
python: can't open file 'spytorch_dvs2_ferro.py': [Errno 2] No such file or directory
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
  File "spytorch_dvs2_ferrro.py", line 59
    print("hello")print("hello")
                      ^
SyntaxError: invalid syntax
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
init done
{'quantization.global_wb': 34, 'inp_mult': 80, 'nb_hidden': 4000, 'nb_steps': 150, 'batch_size': 64, 'quantization.global_lr': 1.5e-05, 'reg_size': 0.001, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=6.01465
Test accuracy: 0.234
Train accuracy: 0.231
Epoch 2: loss=2.10615
Test accuracy: 0.207
Train accuracy: 0.451
Epoch 3: loss=1.49806
Test accuracy: 0.266
Train accuracy: 0.579
Epoch 4: loss=1.08094
Test accuracy: 0.254
Train accuracy: 0.701
Epoch 5: loss=0.77957
Test accuracy: 0.258
Train accuracy: 0.814
Epoch 6: loss=0.54580
Test accuracy: 0.266
Train accuracy: 0.880
Epoch 7: loss=0.38808
Test accuracy: 0.262
Train accuracy: 0.930
Epoch 8: loss=0.27039
Test accuracy: 0.297
Train accuracy: 0.964
Epoch 9: loss=0.18537
Test accuracy: 0.289
Train accuracy: 0.977
Epoch 10: loss=0.13670
Test accuracy: 0.277
Train accuracy: 0.984
Epoch 11: loss=0.13261
Test accuracy: 0.289
Train accuracy: 0.984
Epoch 12: loss=0.12851
Test accuracy: 0.293
Train accuracy: 0.985
Epoch 13: loss=0.11806
Test accuracy: 0.289
Train accuracy: 0.990
Epoch 14: loss=0.11880
Test accuracy: 0.297
Train accuracy: 0.989
Epoch 15: loss=0.11399
Test accuracy: 0.289
Train accuracy: 0.989
Epoch 16: loss=0.10952
Test accuracy: 0.293
Train accuracy: 0.989
Epoch 17: loss=0.10528
Test accuracy: 0.301
Train accuracy: 0.989
Epoch 18: loss=0.10096
Test accuracy: 0.312
Train accuracy: 0.990
Epoch 19: loss=0.09825
Test accuracy: 0.301
Train accuracy: 0.990
Epoch 20: loss=0.09733
Test accuracy: 0.320
Train accuracy: 0.990
Epoch 21: loss=0.09708
Test accuracy: 0.312
Train accuracy: 0.990
Epoch 22: loss=0.09703
Test accuracy: 0.312
Train accuracy: 0.990
Epoch 23: loss=0.09517
Test accuracy: 0.312
Train accuracy: 0.990
Epoch 24: loss=0.09592
Test accuracy: 0.312
Train accuracy: 0.990
Epoch 25: loss=0.09514
Test accuracy: 0.328
Train accuracy: 0.990
Epoch 26: loss=0.09428
Test accuracy: 0.293
Train accuracy: 0.990
Epoch 27: loss=0.09192
Test accuracy: 0.305
Train accuracy: 0.990
Epoch 28: loss=0.09411
Test accuracy: 0.309
Train accuracy: 0.990
Epoch 29: loss=0.09325
Test accuracy: 0.305
Train accuracy: 0.990
Epoch 30: loss=0.09408
Test accuracy: 0.301
Train accuracy: 0.990
Epoch 31: loss=0.09372
Test accuracy: 0.305
Train accuracy: 0.990
Epoch 32: loss=0.09341
Test accuracy: 0.312
Train accuracy: 0.990
Epoch 33: loss=0.09373
Test accuracy: 0.305
Train accuracy: 0.990
Epoch 34: loss=0.09407
Test accuracy: 0.305
Train accuracy: 0.990
Epoch 35: loss=0.09415
Test accuracy: 0.324
Train accuracy: 0.990
{'quantization.global_wb': 34, 'inp_mult': 80, 'reg_size': 0.001, 'weight_sum': 1.12}
